--- a/PVA1_421.Rmd
+++ b/PVA1_421.Rmd
@@ -66,7 +66,7 @@ From Charles Krebs (1972):
 
 ### Exponential growth: the fundamental principle of population ecology
 
-Populations of living things have the ability to grow exponentially. This is the "power of life". 
+Populations of living things have the ability to grow *exponentially*. This is the "power of life". 
 
 ![](puffball1.png)
 
