--- a/PVA1_421.Rmd
+++ b/PVA1_421.Rmd
@@ -68,7 +68,7 @@ From Charles Krebs (1972):
 
 Populations of living things have the ability to grow *exponentially*. This is the "power of life". 
 
-![](puffball1.png)
+![](Puffball002.jpg)
 
 Giant puffballs produce 7 trillion offspring (spores) in one reproductive event.
 
