--- a/PVA2_421.Rmd
+++ b/PVA2_421.Rmd
@@ -16,27 +16,27 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ## PVA for Yellowstone grizzly bears!
 
-In today's class we will use a PVA to do some management-relevant **scenario testing** for the grizzly bear population in Yellowstone National Park.
+In this module we will use a PVA to do some management-relevant **scenario testing** for the grizzly bear population in Yellowstone National Park.
 
 ![](grizzly1.jpg)
 
-Our goal is to better understand the future of the grizzly bear population in Yellowstone park, and the processes that may regulate this population!
+Our goal is to better understand the future of the grizzly bear population in Yellowstone park, and the processes that may *regulate* this population!
 
 Let's walk together through the basic steps in building and running a PVA model: 
 
-#### Step 1: life history diagram
+#### Step 1: conceptualize the life history
 
-Based on the literature that we have read, we determine that there are four main stages in the grizzly bear life history: cub, yearling, subadult and adult! The adult stage is the only one that is reproductive!
+Based on a literature review, we have determined that there are four main stages in the grizzly bear life history: cub, yearling, subadult and adult! The adult stage is the only one that is reproductive! Furthermore, the subadult stage lasts approximately 3 years, from the 3rd to the 5th year of life.
 
 Therefore, our conceptual life history diagram looks something like this!
 
 ![](IM16.jpg)
 
-You can "clone" the base grizzly bear model [here](https://insightmaker.com/insight/162303/Yellowstone-Grizzlies-Unparameterized). This model has not yet been parameterized!
+You can "clone" the base grizzly bear model [here](https://insightmaker.com/insight/162303/Yellowstone-Grizzlies-Unparameterized). This model has not yet been *parameterized*!
 
-#### Step 2: parameterize!
+#### Step 2: parameterize the model!
 
-Let's use this table to parameterize the population vital rates in our model!
+Let's use this table to parameterize the population vital rates in our model! 
 
 This table actually has *two alternative parameterizations*, one summarized from data collected the period from 1983 through 2001, and the other representing data from the period from 2002-2011. 
 
@@ -80,14 +80,15 @@ Okay, let's run the model!
 
 2. What if we configure the model to run for 100 years? What happens now?
 
-**Q**: *NOW* do you think this model is biologically realistic? Why or why not?
+**Short Answer Question #1**: Based on the 100-year simulation, do you think this model of the Yellowstone grizzly population is biologically realistic? Why or why not?
+
 
 3. Now let's change the parameterization to reflect the vital rates observed for the period 2002 to 2011 in the table:
 
 
 ![](grizzly_table1.jpg)
 
-In 2002 the population was more like 40 females- so let's use the following initialization!
+In 2002 the population was more like 40 females- so let's use the following values for the initial population size!
 
 *Cubs:* 15      
 *Yearlings:* 15       
@@ -98,9 +99,8 @@ In 2002 the population was more like 40 females- so let's use the following init
 
 **Q**: What do you notice about this model? Is the population still growing? What about the overall *rate of growth* of the population?
 
-**Q**: Which vital rates changed the most from 1983 to 2002? 
+**Short Answer Question #2**: Which vital rates changed the most from 1983 to 2002? Can you think of any reason for this change?
 
-**Q**: Can you think of any reason for this change?
 
 ##### Density-dependence
 
@@ -145,16 +145,15 @@ To start off, you can clone a full, density-dependent version of the grizzly mod
 
 2. "Comment out" the density dependence equation in the equation editor for yearling survival (place a pound sign before the equation; see below for more explanation). Instead, use the yearling survival estimate for the 2002-2011 time period (0.539). The "commenting out" trick enables you to easily run the grizzly bear PVA with and without the density-dependence process (using the pound signs to alternately comment out the density-dependence equation or the value '0.539'; see below). 
 
+**Short Answer Question #3**: What is the approximate **carrying capacity** (K) of the Yellowstone grizzly population? NOTE: this is an **emergent property** of our new, density-dependent model! We didn't specify carrying capacity, but it *emerges* out of the model.
 
-**Please write down your responses to the following questions:**:
+**Short Answer Question #4** In each case (with density-dependence and without density-dependence; i.e., yearling survival = 0.539), what is the approximate 90% confidence interval for the total population abundance after 100 years? (hint: use the 'Sensitivity Testing' tool; see below for more details) 
 
-**Question 2.1** What is the approximate **carrying capacity** (K) of the Yellowstone grizzly population? NOTE: this is an **emergent property** of our new, density-dependent model! We didn't specify carrying capacity, but it *emerges* out of the model.
-
-**Question 2.2** In each case (with density-dependence and without density-dependence; i.e., yearling survival = 0.539), what is the approximate 90% confidence interval for the total population abundance after 100 years? (hint: use the 'Sensitivity Testing' tool; see below for more details) 
+**Optional Additional Question**
 
 Before answering the next question, comment out the density-dependence equation and set yearling survival to its lowest possible value from Table 1 (above; 0.346). This is an example of a **worst-case scenario** 
 
-**Question 2.3** Local managers have decided that a viable grizzly bear population should have no more than a 5% risk of falling below 30 total individuals at any time over the next 100 years, can you identify an approximate **minimum viable population size (MVP)** for this population under the worst-case scenario above? That is, try to find a set of initial abundances (initial abundance for each of the 6 age-classes) such that you can't reduce the population any further without having an unacceptable (>5%) risk of falling below 30 individuals over the next 100 years.
+**Short Answer Question #5 (optional)** Local managers have decided that a viable grizzly bear population should have no more than a 5% risk of falling below 30 total individuals at any time over the next 100 years, can you identify an approximate **minimum viable population size (MVP)** for this population under the worst-case scenario above? That is, try to find a set of initial abundances (initial abundance for each of the 6 age-classes) such that you can't reduce the population any further without having an unacceptable (>5%) risk of falling below 30 individuals over the next 100 years.
 
 
 #### Helpful hints to answer the grizzly bear questions
