--- a/PVA2_421.Rmd
+++ b/PVA2_421.Rmd
@@ -64,11 +64,9 @@ Let's use the initial (1983) abundances (all female!) to initialize our model:
 *Subadult 3:* 2          
 *Adults:* 10           
 
-Take a few minutes to parameterize the model, using the 1983 to 2001 estimates!
+Take a few minutes to parameterize the model, using the 1983 to 2001 estimates from the table above!
 
-#### Step 3: Spatial structure (not applicable here)
-
-#### Step 4: Simulate!
+#### Step 3: Simulate!
 
 Okay, let's run the model!
 
