--- a/LECTURE13.Rmd
+++ b/LECTURE13.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Metapopulations"
 author: "NRES 470/670"
-date: "Spring 2019"
+date: "Spring 2020"
 output: 
   html_document: 
     theme: spacelab
@@ -16,18 +16,21 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ### Upcoming midterm exam
 
-**when and where** The second midterm exam (out of two) is coming up on **April 11**. You will have the whole 50 minute class period to take the exam. The exam will take place in our regular classroom, unless you make prior arrangements. 
+**when and where** The second midterm exam (out of two) is coming up on **April 15**. You will have the whole 50 minute class period to take the exam. The exam will take place in our regular classroom, unless you make prior arrangements. 
 
 **what** The exam will cover:
 
 - Everything from the first midterm      
-- Matrix population models, including Chapter 3 of Gotelli       
-- Stochasticity and uncertainty        
-- Small-population paradigm and declining-population paradigm        
-- Individual-based models (IBM)            
-- Metapopulations, including Chapter 4 of Gotelli, and all material covered in lecture and lab through today's lecture!       
+- Matrix population models, including all of Gotelli Chapter 3          
+- Stochasticity and uncertainty (lecture and lab)       
+- Small-population paradigm, declining-population paradigm and PVA lectures        
+- Metapopulations and source-sink dynamics (lectures and lab), including Chapter 4 of Gotelli.
     
 *The exam will consist of a mixture of multiple-choice and short-answer questions.*  
+
+I will host a review session via zoom on Monday April 13 at 5pm. See the zoom tab on webcampus for details.  
+
+Finally, don't forget that lab 5 (stochasticity) is due at the end of this week -- Friday, April 10 -- along with your PVA models and justifications.
 
 ## Metapopulations
 
@@ -35,37 +38,41 @@ Metapopulation ecology remains one of the most dynamic and active areas of popul
 
 Broadly speaking, a **metapopulation** is just a *spatially structured* population.
 
-Now that we are thinking about animals living in particular areas in space, we need to start thinking about **movements** as well! Patches in a metapopulation are connected via **dispersal**. If there were no *connectivity* (dispersal among patches), it wouldn't really be a metapopulation, but rather a set of isolated populations that you could model independently.   
+Now that we're thinking about animals living in particular areas in space, we need to start thinking about **movement ecology** in addition to **population ecology**! Patches in a metapopulation are connected via **dispersal**. If there were no *connectivity* (dispersal among patches), it wouldn't really be a metapopulation, but rather a set of isolated populations that you could model independently.   
 
 Including a dispersal process allows us (finally!) to think about the whole "BIDE" equation!      
 
 $\Delta N = B + I - D - E$
 
+But -- in fact, many metapopulation models ('classical metapopulations', covered in this lecture and Gotelli's Chapter 4) don't consider individuals at all!  
+
 ## What is a metapopulation?
 
-In classical *metapopulation ecology*, we are generally considering a **landscape** with a certain number of habitable **patches** (also called 'subpopulations'). 
+In *metapopulation ecology*, we are generally considering a **landscape** with a certain number of potentially habitable **patches** of habitat. 
 
-A metapopulation is simply a *population of patches*, each of which may or may not be occupied by a species of interest at a given point in time. 
+A metapopulation is simply a *population of patches*, each of which may or may not be *occupied* by a species of interest at a given point in time. Different sets of patches may be occupied at different points in time. 
+
+![](MP2.jpg)
 
 ![](patch1.jpg)
 
-To simplify, we often assume that all habitat areas outside a patch are completely unsuitable.   
+To simplify, we often assume that all areas outside a patch are completely unsuitable (i.e., they are NOT habitat).   
 
 We also often assume that all patches are similar (similar habitat quality, area and connectivity to neighboring patches), and therefore are more or less interchangeable.   
 
-Instead of keeping track of the individuals in each patch ($N$), we often just keep track of the fraction of occupied patches in our landscape ($f$!
+Instead of keeping track of the individuals in each patch ($N$), we often just keep track of the fraction of occupied patches in our landscape ($f$)!
 
-Instead of keeping track of the dispersal of indviduals among patches, we only consider the colonization of unoccupied (empty) patches via immigration ($I$) and the "rescue effect" (immigration preventing extinction of a patch; see below). 
+Instead of keeping track of the dispersal of indviduals among patches, we only consider the *colonization* of unoccupied (empty) patches via immigration ($I$) and the *rescue effect* (immigration preventing extinction of a patch; see below). 
 
-![](MP2.gif)
+Metapopulation ecology covers a wide range of scenarios- as long as there are distinct habitat patches in a landscape, and as long as there is some dispersal among patches, then it is a type of metapopulation. When there is a very high rate of dispersal (and mating) among patches, then the metapopulation is described as "panmictic" (perfect genetic connectivity).
 
-Metapopulation ecology generally focuses on the case where there is *some* dispersal, but not complete **panmixia**. 
+NOTE: in some definitions (including for 'classical' metapopulations), a "metapopulation" is more narrowly defined as a set of patches with limited connectivity with at least some unoccupied patches at some points in time. I prefer the more inclusive definition!
 
 ![](MP1.jpg)
 
 Although the term "metapopulation" is often used to refer to models where we don't care about abundance (we only consider **patch occupancy** - like the models in Gotelli Chapter 4), we can keep track of patch abundance in a metapopulation model if we really want to! In fact, if we want, each patch can contain a stage-structured, density dependent population. Or it can contain an assemblage of individuals, as in an individual-based model.     
 
-We will have a chance to use a metapopulation model in lab that is much more complex than the models in Gotelli Chapter 4!
+We will have a chance to use a metapopulation model in Lab 6 that is much more complex than the models in Gotelli Chapter 4!
 
 [Link to metapopulation model with explicit abundance](https://insightmaker.com/insight/74948/Agent-based-metapopulation-model)
 
@@ -76,19 +83,21 @@ The simplest type of spatially structured population model is the "classical" me
 
 The metapopulation concept was first introduced by ecologist [Richard Levins](https://en.wikipedia.org/wiki/Richard_Levins) in 1969, and further developed by [Ilkka Hanski](https://en.wikipedia.org/wiki/Ilkka_Hanski) among others.    
 
-In a classical metapopulation, patches are either **occupied** (coded as 1) or not (coded as 0) at any given point in time. We don't consider abundance ($N$) in these models- we just keep track of whether each patch is occupied or not, and how many total occupied patches we have in our metapopulation at each time step.
+In a classical metapopulation, patches are either **occupied** (coded as 1) or **unoccupied** (coded as 0) at any given point in time. We don't consider abundance ($N$) in these models- we just keep track of whether each patch is occupied or not, and how many total occupied patches we have in our metapopulation at each time step.
 
 That is, the [Stock] we are studying now is NOT the total number of individuals but instead it is the total number of occupied patches (or the fraction of patches occupied)!
 
-Instead of investigating population dynamics, we are investigating **metapopulation dynamics**. That is, how the number of occupied patches (or the fraction of patches occupied) changes over time.
+Instead of investigating population dynamics, we are investigating *metapopulation occupancy dynamics*. That is, how the number of occupied patches (or the fraction of patches occupied) changes over time.
 
-Under the classical model, it NOT a metapopulation unless there are local extinctions!
+Under the classical model, it NOT a metapopulation unless some patches are unoccupied at some points in time!
 
 **Q**: how does a metapopulation grow?
 
 **Q**: how does a metapopulation shrink?
 
 **Q**: what is the equivalent of demographic stochasticity in a metapopulation model? [tophat]
+
+[pause video and answer TopHat question]
 
 **colonization** is the process of a patch transitioning from unoccupied to occupied!
 
@@ -121,10 +130,10 @@ Now that we have the basic terms defined, we can build a basic model of metapopu
 
 - Homogeneous patches (all patches are considered equal and interchangeable- they do not differ in size or quality -- any differences in habitat quality or spatial context within patches are ignored).     
 - Extinction and colonization are insensitive to spatial context (spatial context, or "neighborhood effects", do not affect $p_e$ and $p_i$).          
-- No time lags (metapopulation growth responds instantaneously to any changes in $f$, $p_e$ and $p_i$).     
-- Very large number of patches (even when the fraction of occupied patches is very small, the classical metapopulation still persists!). That is, global extinction is not possible!    
+- No time lags (metapopulation growth responds instantaneously to any changes in $f$).     
+- Very large number of patches (even when the fraction of occupied patches $f$ is very small, the classical metapopulation still persists!). That is, global extinction is not possible!    
 
-We will start by making these assumptions, but then we will "relax" some of them!
+Clearly this is not a very realistic model, but it is a useful starting place. So.. we will start by making these assumptions, but then we will "relax" some of them!
 
 #### Variant #1: island-mainland model
 
@@ -152,17 +161,17 @@ $p_e = e(1-f)$
 
 $e$ represents the strength of the rescue effect. More to the point- $e$ represents the maximum rate of extinction (when nearly all patches are vacant so the rescue effect is negligible). 
 
-### Dynamic stability
+### 'Dynamic' stability
 
-In the classical metapopulation model, extinction is not necessarily uncommon. Patches go extinct -- small patches can be highly vulnerable to demographic stochasiticity as we know! -- but as long as patches can get re-colonized, we can reach an equlibrium, where extinctions and colonizations cancel each other out. In a classical metapopulation model, this is a *stable equilibrium*, and a stable metapopulation in which local extinctions are possible ($p_e > 0$) is called **dynamically stable**. That is, any given patch could be extinct at any given time, but on the whole, the size of the metapopulation is relatively stable and not at risk of **regional (or global) extinction**!
+In the classical metapopulation model, extinction is not necessarily uncommon. Patches go extinct -- small patches can be highly vulnerable to demographic stochasiticity as we know! -- but as long as patches can get re-colonized, we can reach an equilibrium, where extinctions and colonizations cancel each other out. In a classical metapopulation model, this is a *stable equilibrium*, and a stable metapopulation in which local extinctions are possible ($p_e > 0$) is called **dynamically stable**. That is, any given patch could be extinct at any given time, but on the whole, the size of the metapopulation (total patches occupied) is relatively stable and not at risk of **regional (or global) extinction**!
 
-The concept of metapopulation stability- in which extinctions and colonizations balance out - has much in common with the dynamic stability of a single population at carrying capacity - in which any given individual could die at any given time, but deaths and births approximately balance out!
+The concept of dynamic metapopulation stability- in which extinctions and colonizations balance out - has much in common with the dynamic stability of a single population at carrying capacity - in which any given individual could die at any given time, but deaths and births approximately balance out!
 
 ### Spreading the risk!
 
 In the classical metapopulation models, we assumed a very large number of patches, so there was no real chance of regional/global extinction. But most real metapopulations are small enough such that we often need to consider the risk of global extinction.
 
-Let's consider a system in which a species occupies a single patch, and there is a probability of extinction $p_e$ of 0.15 per year. 
+Let's consider a system in which a species occupies a single patch, and there is a probability of extinction $p_e$ of 0.15 per patch per year. 
 
 **Q**: What is the probability of regional extinction after 10 years? 
 
@@ -190,11 +199,11 @@ _This works out to be effectively zero!!!_
 
 ## Sources and sinks!
 
-One important concept related to metapopulations is that of **source-sink dynamics**
+One important and practically useful concept related to metapopulations is that of **source-sink dynamics**
 
-![](sourcesink1.gif)
+![](sourcesink1.jpg)
 
-In the real world, patches vary in size and quality. That is, the assumption of homogeneity (inherent to the classical metapopulation framework) is unlikely to be met in most real metapopulations! 
+In the real world, patches vary in size and quality. That is, the assumption of homogeneity of patches (inherent to the classical metapopulation framework) is unlikely to be met in most real metapopulations! 
 
 Just like with an age-structured population, where vital rates and equilibrium abundance can vary by age or size-class, _vital rates and abundances can vary over space_. Some areas might have better habitat, with higher overall population growth rates! On the other hand, some areas might have poor habitat- and these areas may be associated with lower vital rates...
 
